ci: fixes syntax
Work-item: #1

Co-authored-by: Bruno Padovan Soares de Souza <brunopadovanss@gmail.com>

--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -3,11 +3,11 @@ name: Run tests
 
 on:
   push:
-    branhces:
+    branches:
       - main
 
 jobs:
-  - Run tests:
+  run-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
