ci: sets up flutter
Because the machine is empty, it does not have
flutter installed and therefore cannot run flutter tasks

This commit uses https://github.com/marketplace/actions/flutter-action
to set it up

Work-item: #1

Co-authored-by: Bruno Padovan Soares de Souza <brunopadovanss@gmail.com>

--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -12,6 +12,11 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: 3.24.4
       - name: Run Acceptance tests
         run: flutter test
 
