ci: adds smoke test that the app runs
Co-authored-by: Bruno Padovan Soares de Souza <brunopadovanss@gmail.com>

--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -19,4 +19,18 @@ jobs:
           flutter-version: 3.24.4
       - name: Run Acceptance tests
         run: flutter test
+  run-smoke-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: 3.24.4
+      - name: Run Acceptance tests
+        run: flutter run
+
+
 
