--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           channel: stable
           flutter-version: 3.24.4
-      - name: Run Acceptance tests
+      - name: Run Acceptance Tests
         run: flutter test
   run-smoke-tests:
     runs-on: ubuntu-latest
@@ -29,7 +29,7 @@ jobs:
         with:
           channel: stable
           flutter-version: 3.24.4
-      - name: Run Acceptance tests
+      - name: Run Smoke Tests
         run: flutter run
 
 
