--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -29,8 +29,15 @@ jobs:
         with:
           channel: stable
           flutter-version: 3.24.4
-      - name: Run Smoke Tests
-        run: flutter run
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          script: flutter run
 
 
 
